2010-05-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/linkcmds: Include basic linker command file and define only
	board specific values.  Define RAM and PROM limits only if not defined
	by command line arguments.
	* Makefile.am, preinstall.am: Reflect changes above.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1483/cpukit
	* pci/pci.c: Rename pci_config into rtems_pci_config_t.

2009-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c:
	Reflect changes to rtems_termios_callbacks->write.

2009-11-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, startup/bspstart.c:
	Use ../../sparc/shared/bsppretaskinghook.c.
	* console/console.c: Remove sis comment.

2009-10-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* amba/amba.c: Re-add tmp.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/leon3.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/leon3.cfg: New (relocated from /make/custom).

2009-10-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1445/BSPs
	* pci/pci.c: Rename pci_[read|write]_config* functions into
	BSP_pci_[read|write]_config* and make them static.

2009-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pci/pci.c: Add prototypes for BusCountPCI(void), init_pci(void).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac: Fix typo.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Fix warning.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/ithread.S: Removed. Now bspidle.S.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, console/console.c, console/debugputs.c, include/bsp.h,